--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,5 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 body {
-  background: url("../public/bg.avif") no-repeat;
+  background: url("/bg.avif") no-repeat;
 }
